# sbx

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/images/: architecture.d2  exposure.d2  render.sh
examples/config/: README.md  config.toml
examples/config/flavors/base/: Dockerfile
examples/config/flavors/bun/: Dockerfile  config.toml
examples/config/flavors/claude/: Dockerfile  config.toml
examples/config/flavors/copilot/: Dockerfile  config.toml
examples/flavors/: README.md  caches  claude-mounts  mounts
examples/flavors/base/: Dockerfile  sbx-audit
examples/flavors/bun/: Dockerfile  caches
examples/flavors/claude/: Dockerfile
examples/flavors/java/: Dockerfile  caches
examples/flavors/npm/: Dockerfile  caches
examples/flavors/rust/: Dockerfile  caches
examples/sbx/: Dockerfile  README.md  caches  claude-mounts  config.toml  docker  hostname  mounts  network  ports  services  ssh  start
scripts/: sync-flavors.sh
src/: cli.rs  cloudflare.rs  commands.rs  config.rs  docker.rs  env_file.rs  flavor.rs  fragments.rs  host_proxy.rs  lib.rs  main.rs  mounts.rs  network.rs  project.rs  proxy.rs  public.rs  service.rs  socks.rs  tailscale.rs  tunnel.rs  util.rs  vpn.rs
src/commands/: agent.rs  build.rs  claude.rs  clean.rs  clipboard.rs  docker.rs  env.rs  gui.rs  host_proxy.rs  hostname.rs  init.rs  migrate.rs  mount.rs  port.rs  profiles.rs  proxy.rs  public.rs  purge.rs  run.rs  scan.rs  service.rs  session.rs  sessions.rs  shell.rs  ssh.rs  start.rs  stop.rs  tailscale.rs  tunnel.rs  vpn.rs
(+11 files in other folders)
