[package]
name = "sbx"
version = "0.1.5"
edition = "2024"
description = "Sandboxed Docker dev environments for npm/bun/rust/claude"
authors = ["nick22985"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
